INTERNAL-45: Better difference for selected swatches

--- a/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/swatch-item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/swatch-item.phtml
@@ -30,7 +30,7 @@ if (!$productId || !$attributeId) {
     class="button button--size-sm select-none transition-all ease-in-out relative bg-bg-500"
     :class="
       {
-        'button--outline-primary button--disabled !opacity-100': selectedValues[<?= (int) $attributeId ?>] === item.id || !optionIsActive(<?= (int) $attributeId ?>, item.id),
+        'button--outline-primary border-2 button--disabled !opacity-100': selectedValues[<?= (int) $attributeId ?>] === item.id || !optionIsActive(<?= (int) $attributeId ?>, item.id),
         'button--outline-secondary': selectedValues[<?= (int) $attributeId ?>] !== item.id,
       }
     "
@@ -54,7 +54,7 @@ if (!$productId || !$attributeId) {
       :id="`attribute-option-<?= (int) $productId ?>-${item.id}`"
       :value="item.id"
       name="super_attribute[<?= (int) $attributeId ?>]"
-      class="-z-10 absolute"
+      class="-z-10 absolute opacity-0"
       type="radio"
       :required="getAllowedAttributeOptions(<?= (int) $attributeId ?>).filter(attributeOption => selectedValues[attributeOption]).length === 0"
       :aria-label="getSwatchText(<?= (int)$attributeId ?>, item.id)"
