--- a/app/design/frontend/Satoshi/Hyva/Magento_GroupedProduct/templates/product/view/type/grouped.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_GroupedProduct/templates/product/view/type/grouped.phtml
@@ -26,7 +26,7 @@ $hasAssociatedProducts = count($associatedProducts) > 0;
 <?php if ($hasAssociatedProducts): ?>
   <div class="flex justify-between items-center mb-3">
     <h2 class="font-semibold text-text-500">
-        <?= $escaper->escapeHtml(__('Grouped product items')) ?>
+        <?= $escaper->escapeHtml(__('Product Set')) ?>
     </h2>
     <button
       type="button"
