--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
@@ -17,7 +17,7 @@
         <move element="product.media" destination="product.details" />
         <move element="page.main.title" destination="product.details.info" as="product.title" />
         <move element="product.info" destination="product.details.info" />
-        <move element="product_options_wrapper_bottom" destination="product.details.info" />
+        <move element="product.info.options.wrapper.bottom" destination="product.info" after="product.info.form"/>
         <move element="product.info.details" destination="product.details.info" />
     </body>
 </page>
