--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -5,11 +5,11 @@ declare(strict_types=1);
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\ProductAttributes;
 use Hyva\Theme\ViewModel\ProductPage;
+use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Catalog\Model\Product;
+use Magento\Checkout\Helper\Cart;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
-use Magento\Checkout\Helper\Cart;
-use Hyva\Theme\ViewModel\SvgIcons;
 
 /** @var Template $block */
 /** @var Escaper $escaper */
@@ -26,7 +26,8 @@ $productType = $product->getTypeId();
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
-$isProductInCart = in_array($productType, ['simple', 'virtual']) && $this->helper(Cart::class)->getQuote()->hasProductId($product->getId());
+$isProductInCart = in_array($productType,
+    ['simple', 'virtual']) && $this->helper(Cart::class)->getQuote()->hasProductId($product->getId());
 $isPopup = $block->getData('is_popup') ?? false;
 $isSmall = $block->getData('is_small') ?? false;
 $hasVariants = $productType === 'configurable';
@@ -48,43 +49,45 @@ if (!$inStock) {
 ?>
 <!-- Quantity Controls -->
 <?php if ($block->getChildBlock('product.info.quantity')): ?>
-  <?= $block->getChildBlock('product.info.quantity')->setData(['is_popup' => $isPopup, 'is_small' => $isSmall])->toHtml() ?>
+  <?= $block->getChildBlock('product.info.quantity')->setData([
+    'is_popup' => $isPopup, 'is_small' => $isSmall
+  ])->toHtml() ?>
 <?php endif; ?>
 
 
 <!-- Add to cart button -->
 <button
-    <?php if($isProductInCart || !$inStock): ?>
-      style="display: none"
-    <?php endif; ?>
-    x-show="<?= (int)$inStock ?> && !isVariantInCart"
-    class="
+  <?php if ($isProductInCart || !$inStock): ?>
+    style="display: none"
+  <?php endif; ?>
+  x-show="<?= (int) $inStock ?> && !isVariantInCart"
+  class="
       <?= (in_array($productType, ['configurable', 'downloadable', 'grouped']) && !$isPopup) ? 'max-md:hidden' : '' ?>
       <?= $isSmall ? 'button--size-sm' : '' ?>
       animate-on-transition button button--filled-primary flex-grow
     "
-    :class="
+  :class="
       {
-        'md:hidden': isVariantInCart || <?= (int)!$inStock ?>,
-        'max-md:hidden': 
-          <?= (int)!$inStock ?> ||
-          (<?= (int)(!$isPopup && in_array($productType, ['configurable', 'grouped'])) ?>) ||
-          (<?= (int)$isPopup ?> && isVariantInCart) ||
-          (<?= (int)($productType === 'downloadable') ?> && <?= (int)!$isPopup ?>),
+        'md:hidden': isVariantInCart || <?= (int) !$inStock ?>,
+        'max-md:hidden':
+          <?= (int) !$inStock ?> ||
+          (<?= (int) (!$isPopup && in_array($productType, ['configurable', 'grouped'])) ?>) ||
+          (<?= (int) $isPopup ?> && isVariantInCart) ||
+          (<?= (int) ($productType === 'downloadable') ?> && <?= (int) !$isPopup ?>),
         'button--disabled': isProductBeingAdded || isProductBeingRemoved
       }
     "
-    type="submit"
-    form="product_addtocart_form<?= $isPopup ? '_popup' : '' ?>"
-    title="<?= $escaper->escapeHtmlAttr(__('Add to Cart')) ?>"
-    data-addto="cart"
-    x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
-    :disabled="isProductBeingAdded || isProductBeingRemoved"
-    type="button"
+  type="submit"
+  form="product_addtocart_form<?= $isPopup ? '_popup' : '' ?>"
+  title="<?= $escaper->escapeHtmlAttr(__('Add to Cart')) ?>"
+  data-addto="cart"
+  x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
+  :disabled="isProductBeingAdded || isProductBeingRemoved"
+  type="button"
 >
     <span
-        class="flex"
-        x-show="!isProductBeingAdded && !isProductBeingRemoved"
+      class="flex"
+      x-show="!isProductBeingAdded && !isProductBeingRemoved"
     >
         <?= __('Add to cart') ?>
         <span class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>">
@@ -92,18 +95,18 @@ if (!$inStock) {
         </span>
     </span>
 
-    <span style="display: none" x-show="isProductBeingRemoved">
+  <span style="display: none" x-show="isProductBeingRemoved">
         <?= __('Removing from cart...') ?>
     </span>
 
-    <span style="display: none" x-show="isProductBeingAdded">
+  <span style="display: none" x-show="isProductBeingAdded">
         <?= __('Adding...') ?>
     </span>
 </button>
 
 <!-- Select items, only for grouped products -->
 <button
-  <?php if($productType !== 'grouped'): ?>
+  <?php if ($productType !== 'grouped'): ?>
     style="display: none"
   <?php endif; ?>
   class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?> <?= ($isPopup || $productType !== 'grouped') ? 'max-md:hidden' : '' ?>"
@@ -139,7 +142,7 @@ if (!$inStock) {
 
 <!-- Select options, for configurable product when variant not in cart -->
 <button
-  <?php if($isProductInCart): ?>
+  <?php if ($isProductInCart): ?>
     style="display: none"
   <?php endif; ?>
   x-show="!isVariantInCart"
@@ -176,7 +179,7 @@ if (!$inStock) {
 
 <!-- Select another option, for configurable when variant is in cart -->
 <button
-  <?php if(!$isProductInCart || $isPopup || !$hasVariants): ?>
+  <?php if (!$isProductInCart || $isPopup || !$hasVariants): ?>
     style="display: none"
   <?php endif; ?>
   x-show="<?= (int) $hasVariants ?> && isVariantInCart && !<?= (int) $isPopup ?>"
@@ -206,9 +209,9 @@ if (!$inStock) {
 </button>
 
 <!-- Show links, for downloadable products -->
- <?php if($productType === 'downloadable'): ?>
+<?php if ($productType === 'downloadable'): ?>
   <button
-    <?php if(!$inStock | $isPopup): ?>
+    <?php if (!$inStock | $isPopup): ?>
       style="display: none"
     <?php endif; ?>
     x-show="<?= (int) !$isPopup ?>"
@@ -256,7 +259,7 @@ if (!$inStock) {
 
 <!-- Out of stock button -->
 <button
-  <?php if($isProductInCart || !$inStock): ?>
+  <?php if ($isProductInCart || !$inStock): ?>
     style="display: none"
   <?php endif; ?>
   x-show="!isVariantInCart || <?= (int) $isPopup ?>"
@@ -264,15 +267,15 @@ if (!$inStock) {
   disabled
   type="button"
 >
-    <?= __('Out of stock') ?>
+  <?= __('Out of stock') ?>
 </button>
 
 <!-- Show product button -->
 <a
-  <?php if(!$isPopup || !$isProductInCart || $productType === 'downloadable'): ?>
+  <?php if (!$isPopup || !$isProductInCart || $productType === 'downloadable'): ?>
     style="display: none"
   <?php endif; ?>
-  x-show="<?= (int)($productType !== 'downloadable') ?> && (!isVariantInCart || <?= (int) $isPopup ?>)"
+  x-show="<?= (int) ($productType !== 'downloadable') ?> && (!isVariantInCart || <?= (int) $isPopup ?>)"
   class="animate-on-transition button button--outline-primary w-full md:hidden"
   :class="
     {
