--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -78,8 +78,8 @@ $mixBackground = false;
                   :key="o"
                 >
                   <p
-                    class="text-md"
-                    x-text="`${option.label}: ${option.value}`"
+                    class="text-md mb-1 [&_.price]:text-primary-500 [&_.price]:block"
+                    x-html="`${option.label}: ${option.value}`"
                   ></p>
                 </template>
               </template>
