--- a/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/type/bundle/option/radio.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/type/bundle/option/radio.phtml
@@ -27,6 +27,7 @@ $activeSelectOptions = [];
   <label class="radio mb-0 w-full py-1"
          for="bundle-option-<?= (int) $optionId ?>-<?= (int) $selections[0]->getSelectionId() ?>">
     <input type="checkbox"
+           id="bundle-option-<?= (int) $optionId ?>-<?= (int) $selections[0]->getSelectionId() ?>"
            name="bundle_option[<?= (int) $optionId ?>]"
            form="product_addtocart_form"
            class="radio__input"
@@ -94,8 +95,6 @@ $activeSelectOptions = [];
             disabled
           <?php endif; ?>
                value="<?= (int) $selectionId ?>"
-               data-option-id="<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
-               x-on:change="activeSelectOptions['<?= (int) $optionId ?>'] = [$event.target.value]; $nextTick(() => {calculateTotalPrice()});"
         />
         <span class="radio__control h-5 w-5" aria-hidden="true"></span>
         <span class="radio__label ml-3"><?= /* @noEscape */
