--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -62,7 +62,8 @@ if (!$inStock) {
   <?php endif; ?>
   x-show="<?= (int) $inStock ?> && !isVariantInCart"
   class="
-      <?= (in_array($productType, ['configurable', 'downloadable', 'grouped']) && !$isPopup) ? 'max-md:hidden' : '' ?>
+      <?= (in_array($productType,
+      ['configurable', 'downloadable', 'grouped', 'bundle']) && !$isPopup) ? 'max-md:hidden' : '' ?>
       <?= $isSmall ? 'button--size-sm' : '' ?>
       animate-on-transition button button--filled-primary flex-grow
     "
@@ -71,14 +72,13 @@ if (!$inStock) {
         'md:hidden': isVariantInCart || <?= (int) !$inStock ?>,
         'max-md:hidden':
           <?= (int) !$inStock ?> ||
-          (<?= (int) (!$isPopup && in_array($productType, ['configurable', 'grouped'])) ?>) ||
-          (<?= (int) $isPopup ?> && isVariantInCart) ||
-          (<?= (int) ($productType === 'downloadable') ?> && <?= (int) !$isPopup ?>),
+          (<?= (int) (!$isPopup && in_array($productType, ['configurable', 'downloadable', 'grouped', 'bundle'])) ?>) ||
+          (<?= (int) $isPopup ?> && isVariantInCart),
         'button--disabled': isProductBeingAdded || isProductBeingRemoved
       }
     "
   type="submit"
-  form="product_addtocart_form<?= $isPopup ? '_popup' : '' ?>"
+  form="product_addtocart_form"
   title="<?= $escaper->escapeHtmlAttr(__('Add to Cart')) ?>"
   data-addto="cart"
   x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
@@ -177,6 +177,7 @@ if (!$inStock) {
   </span>
 </button>
 
+<!-- TODO: refactor to eliminate duplicates -->
 <!-- Select another option, for configurable when variant is in cart -->
 <button
   <?php if (!$isProductInCart || $isPopup || !$hasVariants): ?>
@@ -224,6 +225,39 @@ if (!$inStock) {
       class="inline-flex items-center"
     >
       <?= __('Show links') ?>
+      <span
+        class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+      >
+        <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+      </span>
+    </span>
+
+    <span style="display: none" x-show="isProductBeingRemoved">
+        <?= __('Removing from cart...') ?>
+    </span>
+
+    <span style="display: none" x-show="isProductBeingAdded">
+        <?= __('Adding...') ?>
+    </span>
+  </button>
+<?php endif; ?>
+
+<!-- Customize bundle, for bundle products -->
+<?php if ($productType === 'bundle'): ?>
+  <button
+    <?php if (!$inStock | $isPopup): ?>
+      style="display: none"
+    <?php endif; ?>
+    x-show="<?= (int) !$isPopup ?>"
+    class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?>"
+    @click.prevent="showProductActions()"
+    type="button"
+  >
+    <span
+      x-show="!isProductBeingAdded && !isProductBeingRemoved"
+      class="inline-flex items-center"
+    >
+      <?= __('Customize bundle') ?>
       <span
         class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
       >
