--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
@@ -23,26 +23,35 @@ $isPopup = $block->getData('is_popup') ?? false;
 ?>
 
 <?php if ($product->isSaleable()): ?>
-    <template x-if="!$store.main.isMobile || <?= (int) ($isPopup || in_array($productType, ['simple', 'virtual'])) ?>">
-        <form method="post"
-            action="<?= $escaper->escapeUrl($productInfoBlock->getSubmitUrl($product)) ?>"
-            id="product_addtocart_form<?= $isPopup ? '_popup' : '' ?>"
-            <?php if ($product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>
-            @submit.prevent="addToCart($event)"
-            <?php if (!$isPopup): ?>
-                class="animate-on-transition md:mb-5 max-md:hidden"
-            <?php else: ?>
-                class="max-md:mx-2"
-            <?php endif; ?>
-        >
-            <input type="hidden" name="product" value="<?= (int)$product->getId() ?>" />
-            <input type="hidden" name="selected_configurable_option" value=""  />
-            <input type="hidden" name="related_product" id="related-products-field" value="" />
-            <input type="hidden" name="item"  value="<?= (int)$block->getRequest()->getParam('id') ?>">
-            <?= $block->getBlockHtml('formkey') ?>
 
-            <?= $block->getChildHtml() ?>
+  <!--
+    What do we need here ?
+    this form gets rendered twice, once on desktop in its own position, and on mobile inside the popup, when mobile we need to not render it in normal position, unless product has no popup!
+    so, if desktop do nothing, if mobile render only if is popup except for simple prods
+  -->
 
-        </form>
-    </template>
+  <template
+    x-if="!$store.main.isMobile || <?= (int) ($isPopup || in_array($productType, ['simple', 'virtual'])) ?>"
+  >
+    <form method="post"
+          action="<?= $escaper->escapeUrl($productInfoBlock->getSubmitUrl($product)) ?>"
+          id="product_addtocart_form"
+      <?php if ($product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>
+          @submit.prevent="addToCart($event)"
+      <?php if (!$isPopup): ?>
+        class="animate-on-transition md:mb-5 max-md:hidden"
+      <?php else: ?>
+        class="max-md:mx-2"
+      <?php endif; ?>
+    >
+      <input type="hidden" name="product" value="<?= (int) $product->getId() ?>"/>
+      <input type="hidden" name="selected_configurable_option" value=""/>
+      <input type="hidden" name="related_product" id="related-products-field" value=""/>
+      <input type="hidden" name="item" value="<?= (int) $block->getRequest()->getParam('id') ?>">
+      <?= $block->getBlockHtml('formkey') ?>
+
+      <?= $block->getChildHtml() ?>
+
+    </form>
+  </template>
 <?php endif; ?>
